workshop04/manifest/0_config.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: books-ns
